# ExtrinsicErrorTerm

./: ArmyOdom.txt  ArmyUltra1.txt  CMakeLists.txt  README.md  test.cpp  test_MapOptimization.cpp  test_Mapping.cpp  test_Relocalization.cpp  zhOdom.txt  zhUltra.txt
include/ExtrinsicErrorTerm/: ExtrinsicErrorTerm.h  KDTreeVectorOfVectorsAdaptor.h  MapOptimization.h  Mapping.h  Relocalization.h  STDesc.h  Scancontext.h  aloam_analytic_factor.h  g2oFacto.h  icp_3d.h  kdtree.h  lidarFactor.h  pointType.h
include/ExtrinsicErrorTerm/common/: eigen_types.h  math_utils.h  point_types.h
src/: ExtrinsicErrorTerm.cpp  MapOptimization.cpp  Mapping.cpp  Relocalization.cpp  STDesc.cpp  Scancontext.cpp  icp_3d.cpp  kdtree.cpp
